syntax = "proto3";
package pb;
option go_package = "gim-xchat/pkg/protocol/pb";

import "google/protobuf/empty.proto";

service BusinessExt {
  // 登录
  rpc SignIn (SignInReq) returns (SignInResp);
  // 获取用户信息
  rpc GetUser (GetUserReq) returns (GetUserResp);
  // 更新用户信息
  rpc UpdateUser (UpdateUserReq) returns (google.protobuf.Empty);
  // 搜索用户(这里简单数据库实现，生产环境建议使用ES)
  rpc SearchUser (SearchUserReq) returns (SearchUserResp);

  // 获取推特授权 URL
  rpc GetTwitterAuthorizeURL (GetTwitterAuthorizeURLReq) returns (TwitterAuthorizeURLResp);
  // 推特登录
  rpc TwitterSignIn (TwitterSignInReq) returns (TwitterSignInResp);
  // 每日签到接口
  rpc DailySignIn (google.protobuf.Empty) returns (DailySignInResp);
  // 关注推特
  rpc FollowTwitter (google.protobuf.Empty) returns (TwitterFollowResp);
  // 查询任务状态
  rpc GetTaskStatus (GetTaskStatusReq) returns (GetTaskStatusResp);
  // 领取任务奖励
  rpc ClaimTaskReward (ClaimTaskRewardReq) returns (ClaimTaskRewardResp);
  // 填写邀请码
  rpc FillInviteCode (FillInviteCodeReq) returns (FillInviteCodeResp);

  // 钱包登录接口
  rpc WalletSignIn (WalletSignInReq) returns (WalletSignInResp);

  rpc ModifyTaskStatus (ModifyTaskStatusReq) returns (ModifyTaskStatusResp);

  // 根据推特用户名模糊查询用户
  rpc SearchTwitterUser (SearchTwitterUserReq) returns (SearchTwitterUserResp);
  // 创建token
  rpc CreateToken (CreateTokenReq) returns (CreateTokenResp);
  // 获取token信息
  rpc GetToken (GetTokenReq) returns (GetTokenResp);
}

// 请求消息，包含 walletAddress 参数
message GetTwitterAuthorizeURLReq {
  string wallet_address = 1;  // 钱包地址
}

// 钱包登录请求
message WalletSignInReq {
  string wallet_address = 1;        // 钱包地址 (如以太坊地址)
  string signature = 2;             // 签名数据 (用户用钱包签名的身份验证信息)
  string message = 3;               // 原始消息 (可以是时间戳、nonce等，用于防止重放攻击)
}

// 钱包登录响应
message WalletSignInResp {
  int32 code = 1;                   // 状态码
  string message = 2;               // 消息描述
  bool is_new = 3;                  // 是否是新用户
  int64 user_id = 4;                // 用户ID
  string token = 5;                 // Token (返回给客户端用于后续请求)
  User user_info = 6;               // 用户信息
}

// 修改任务状态请求
message ModifyTaskStatusReq {
  int64 user_id = 1;         // 用户ID
  int64 task_id = 2;         // 任务ID
  int32 status = 3;          // 任务状态 (1: 未完成, 2: 进行中, 3: 待领取, 4: 已领取)
}

// 修改任务状态响应
message ModifyTaskStatusResp {
  int32 code = 1;            // 状态码
  string message = 2;        // 消息描述
}

// 登录请求
message SignInReq {
  string phone_number = 1; // 手机号
  string code = 2;         // 验证码
  int64 device_id = 3;     // 设备ID
}

// 登录响应
message SignInResp {
  bool is_new = 1;         // 是否是新用户
  int64 user_id = 2;       // 用户ID
  string token = 3;        // Token
}

// 用户信息
message User {
  int64 user_id = 1;            // 用户id
  string nickname = 2;          // 昵称
  int32 sex = 3;                // 性别
  string avatar_url = 4;        // 头像地址
  string extra = 5;             // 附加字段
  int64 create_time = 6;        // 创建时间
  int64 update_time = 7;        // 更新时间
  string twitter_id = 8;        // 推特id
  string twitter_username = 9;  // 推特用户名
  int32 xpoint = 10;            // 用户当前积分
  int32 follow_reward = 11;     // Twitter关注奖励状态: 0未领取, 1已领取
  string invite_code = 12;      // 邀请码
  string inviter_code = 13;     // 邀请人邀请码
  string wallet_address = 14;   // 钱包地址
}

// 获取用户信息请求
message GetUserReq {
  int64 user_id = 1;          // 用户ID
}

// 获取用户信息响应
message GetUserResp {
  int32 code = 1;             // 状态码
  string message = 2;         // 消息描述
  User user = 3;              // 用户信息
}

// 更新用户信息请求
message UpdateUserReq {
  string nickname = 1;        // 昵称
  int32 sex = 2;              // 性别
  string avatar_url = 3;      // 头像地址
  string extra = 4;           // 附加字段
}

// 搜索用户请求
message SearchUserReq {
  string key = 1;             // 搜索关键字
}

// 搜索用户响应
message SearchUserResp {
  repeated User users = 1;    // 用户列表
}

// 获取 Twitter 授权 URL 响应
message TwitterAuthorizeURLResp {
  int32 code = 1;             // 状态码
  string message = 2;         // 消息描述
  string url = 3;             // 授权 URL
}

// 推特登录请求
message TwitterSignInReq {
  string authorization_code = 1; // 授权码
  string state = 2;              // 状态
  string wallet_address = 3;     // 钱包地址
}

// 推特登录响应
message TwitterSignInResp {
  int32 code = 1;             // 状态码
  string message = 2;         // 消息描述
  bool is_new = 3;            // 是否是新用户
  int64 user_id = 4;          // 用户ID
  string token = 5;           // Token
  User user_info = 6;         // 用户信息
  string err_message = 7;
}

// 每日签到响应
message DailySignInResp {
  int32 code = 1;             // 状态码
  string message = 2;         // 消息描述
}

// Twitter 关注奖励响应
message TwitterFollowResp {
  int32 code = 1;             // 状态码
  string message = 2;         // 消息描述
  int32 success = 3;          // 领取状态 (0: 失败, 1: 成功)
}

// 查询任务状态请求
message GetTaskStatusReq {
  int64 task_id = 1;          // 任务ID
}

// 查询任务状态响应
message GetTaskStatusResp {
  int32 code = 1;             // 状态码
  string message = 2;         // 消息描述
  int32 status = 3;           // 任务状态 (1: 未完成, 2: 进行中, 3: 待领取, 4: 已领取)
}

message FillInviteCodeReq {
  string invite_code = 1;     // 邀请码
}

message FillInviteCodeResp {
  int32 code = 1;             // 状态码
  string message = 2;         // 消息描述
}

// 领取任务奖励请求
message ClaimTaskRewardReq {
  int64 task_id = 1;          // 任务ID
}

// 领取任务奖励响应
message ClaimTaskRewardResp {
  int32 code = 1;             // 状态码
  string message = 2;         // 消息描述
}

// 根据推特用户名搜索用户请求
message SearchTwitterUserReq {
  string twitter_username = 1;  // 推特用户名关键字
  int32 page_size = 2;         // 每页数量
  int32 page_num = 3;          // 页码
}

// 根据推特用户名搜索用户响应
message SearchTwitterUserResp {
  int32 code = 1;              // 状态码
  string message = 2;          // 消息描述
  repeated User users = 3;     // 用户列表
  int32 total = 4;            // 总数
}
// Token信息
message Token {
  int64 id = 1;                    // token ID
  int64 user_id = 2;              // 创建者用户ID
  string token_address = 3;        // token合约地址
  string token_name = 4;          // token名称
  string token_symbol = 5;        // token符号
  int32 decimals = 6;             // token精度
  string total_supply = 7;        // 发行总量
  string creator_addr = 8;        // 创建者钱包地址
  int32 chain_id = 9;             // 链ID
  int32 status = 10;              // 状态 1:正常 0:禁用
  int64 created_at = 11;          // 创建时间
  int64 updated_at = 12;          // 更新时间
}

// 创建token请求
message CreateTokenReq {
  string token_address = 1;        // token合约地址
  string token_name = 2;          // token名称
  string token_symbol = 3;        // token符号
  int32 decimals = 4;             // token精度
  string total_supply = 5;        // 发行总量
  int32 chain_id = 6;             // 链ID
}

// 创建token响应
message CreateTokenResp {
  int32 code = 1;                 // 状态码
  string message = 2;             // 消息描述
  Token token = 3;                // token信息
}

// 获取token请求
message GetTokenReq {
  string token_address = 1;       // token合约地址
}

// 获取token响应
message GetTokenResp {
  int32 code = 1;                 // 状态码
  string message = 2;             // 消息描述
  Token token = 3;                // token信息
}