syntax = "proto3";
package pb;
option go_package = "xchat-gim/pkg/protocol/pb";

service RewardService {
  // 每日签到接口
  rpc DailySignIn (DailySignInReq) returns (DailySignInResp);

  // 连续7天奖励接口
  rpc ClaimSevenDayReward (ClaimSevenDayRewardReq) returns (ClaimSevenDayRewardResp);
}

// 每日签到请求
message DailySignInReq {
  int64 user_id = 1; // 用户ID
}

// 每日签到响应
message DailySignInResp {
  int32 reward_amount = 1; // 奖励数量
  string message = 2;      // 返回消息
}

// 连续7天奖励请求
message ClaimSevenDayRewardReq {
  int64 user_id = 1; // 用户ID
}

// 连续7天奖励响应
message ClaimSevenDayRewardResp {
  int32 reward_amount = 1; // 奖励数量
  string message = 2;      // 返回消息
}